# dprint-plugin-sql

./: Cargo.toml  license  readme.md  schema.json
.github/workflows/: ci.yml
src/: format_text.rs  lib.rs
src/configuration/: builder.rs  resolve_config.rs
tests/: test.rs
tests/specs/Basic/: Basic_All.txt
