[package]
name = "daaku-dprint-plugin-sql"
version = "42"
authors = [
  "Naitik Shah <n@daaku.org>",
  "David Sherret <dsherret@gmail.com>",
]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-sql"
keywords = ["formatting", "formatter", "sql"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-sql"
description = "SQL formatter for dprint via sqlformat-rs."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.67", features = ["formatting", "wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlformat = "0.5"

[dev-dependencies]
dprint-development = "0.10"
